*xdemorse-2.3 (19 Jul 2012)

  19 Jul 2012; Michael Weber <xmw@gentoo.org> +xdemorse-2.3.ebuild:
  media-radio/xdemorse: Version bump