@@ -3,10 +3,11 @@ Hash: SHA256
 
 DIST xdemorse-2.2.tar.bz2 49552 SHA256 29bfaf06651473e7c9676ddc8bb36154aaa23fda396072b71f5fcea0a90facbf SHA512 6bf1376cc09e7a7b268b359f3fbf4c58f2b94bd7de9d92b5b73a477c4d527fa400f9683196dfbdeefa9664f43470046a1ed63bf131dfca211205cb0b6644688b WHIRLPOOL ace11bc01371f8c2109e85c1ec66600fe77c0a66587909545c05c2da18cdbe92d7cb51bd7e9ae8291aa54537dcb8b9d45800f561b6e4b45fd8deed3abe32240b
 DIST xdemorse-2.3.tar.bz2 54435 SHA256 a76e6886038456be5ca7e67b4be6c0bb031a70eacaec00b7d87adef72be911db SHA512 e17868a08cef7b876c82a1c139659b0754c1eb531656006ae628ab38baca69dc54a16119882bbd0b30afca2f8b8895a910e635c4e2e9817f918c97a358e51b4d WHIRLPOOL 7640822df2811b589a94422de0802e0ab1d4d78a787f4aeb339b87707d544da0d31db97342fa8215de974d558b2ed0ff32c47e12d9f40175182d2c34829c66c7
+DIST xdemorse-2.4.tar.bz2 136003 SHA256 6f98e6c74ceb6b3136510291b4f0aa9d57040a2fbe420c761c099700cb0efd56 SHA512 cd2793e46bec221c7bbffada7500878e9f38df6799acbaf130cc1199787485614d9cc3661e98150f855ef8b74c77a908157ea2bb5db599c349a742c90e3f6b91 WHIRLPOOL 61553aebf6fe955c0d18311b0368f6b18d6abf0289705839848477a13ef6f21ca7f50d9e54fe32ed6ff999a6b7932edaffdd5d874b4d4e5eb16004d274e0986b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAlAHot4ACgkQknrdDGLu8JBWeQD/dUGxHEFdzlt4nY7LderGB+hu
-Z9buWvORpY4ho8tHylEA/Rq35lMMv8YzDxQyfR3JDnpY5iNxf2TFoPPISAu6mZBK
-=nw8X
+iF4EAREIAAYFAlFBil0ACgkQknrdDGLu8JBmFAD/cX0FDQD3DGGN2822xxReO+04
+cL2U9TvVUInaZEhNcWgA+wdhrv91sxT2B5O4JA1CawWJOrasvcVpN7wb0LGPbFas
+=rP12
 -----END PGP SIGNATURE-----
